Mise en place de la partie header

--- a/index.html
+++ b/index.html
@@ -10,6 +10,19 @@
     <title>Reservia</title>
 </head>
 <body>
-    
+    <!-- HEADER -->
+    <header>
+        <img src="img/Reservia.svg" alt="Logo reservia">
+        <nav>
+            <a class="navLink" href="#hosting" data-active="true">Hébergements</a>
+            <a class="navLink" href="#activity">Activités</a>
+            <a class="signUp" href="#">S'inscrire</a>
+        </nav>
+    </header>
+
+    <!-- MAIN -->
+    <main>
+
+    </main>
 </body>
 </html>
