--- a/index.html
+++ b/index.html
@@ -312,10 +312,80 @@
 
     <!-- ACTIVITY -->
       <section id="activity">
-        <div class="hostingHeader">
+        <div class="hostingHeader activityHeader">
             <h3>Activités a Marseille</h3>
         </div>
+
+        <!-- ACTIVITY -->
+        <a href="#" class="activityItem activityItem1">
+            <div class="activityImg">
+                <img src="img/activity/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Photo du vieux port">
+            </div>
+            <h4 class="activityTitle">Vieux Port</h4>
+        </a>
+
+        <!-- ACTIVITY -->
+        <a href="#" class="activityItem activityItem2">
+            <div class="activityImg">
+                <img src="img/activity/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Photo du fort de Pomègues">
+            </div>
+            <h4 class="activityTitle">Fort de Pomègues</h4>
+        </a>
+
+        <!-- ACTIVITY -->
+        <a href="#" class="activityItem activityItem3">
+            <div class="activityImg">
+                <img src="img/activity/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Photo du Parc National des Calanques">
+            </div>
+            <h4 class="activityTitle">Parc National des Calanques</h4>
+        </a>
+
+        <!-- ACTIVITY -->
+        <a href="#" class="activityItem activityItem4">
+            <div class="activityImg">
+                <img src="img/activity/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Photo de Notre-Dame-de-la-Garde">
+            </div>
+            <h4 class="activityTitle">Notre-Dame-de-la-Garde</h4>
+        </a>
+
+        <!-- ACTIVITY -->
+        <a href="#" class="activityItem activityItem5">
+            <div class="activityImg">
+                <img src="img/activity/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Photo de l'Île du Frioul">
+            </div>
+            <h4 class="activityTitle">Île du Frioul</h4>
+        </a>
+
+        <!-- ACTIVITY -->
+        <a href="#" class="activityItem activityItem6">
+            <div class="activityImg">
+                <img src="img/activity/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Photo du Parc Longchamp">
+            </div>
+            <h4 class="activityTitle">Parc Longchamp</h4>
+        </a>
       </section>
     </main>
+
+    <!-- FOOTER -->
+    <footer>
+        <div class="footerAbout">
+            <h5>A propos</h5>
+            <a href="#" class="footerLink">Fonctionnement du site</a>
+            <a href="#" class="footerLink">Conditions générales de vente</a>
+            <a href="#" class="footerLink">Données et confidentialités</a>
+        </div>
+
+        <div class="footerHosting">
+            <h5>Nos hébergement</h5>
+            <a href="#" class="footerLink">Charte de qualité</a>
+            <a href="#" class="footerLink">Soumettre votre hotel</a>
+        </div>
+
+        <div class="footerSupport">
+            <h5>Assistance</h5>
+            <a href="#" class="footerLink">Centre d'aide</a>
+            <a href="#" class="footerLink">Nous contacter</a>
+        </div>
+    </footer>
   </body>
 </html>
