Ajout Afficher plus

--- a/index.html
+++ b/index.html
@@ -224,6 +224,10 @@
               </div>
             </div>
           </div>
+
+          <div class="showMore">
+            <p>Afficher plus</p>
+          </div>
         </section>
 
         <aside id="hostingAside">
