--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <i class="fas fa-search" aria-hidden="true"></i>
           </a>
 
-          <a class="searchBarButton hideOnMobile" href="#">
+          <a class="searchBarButton hideOnMobile showTablet" href="#">
             Rechercher
           </a>
 
