Espacement de certain element

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             <!-- IMG -->
             <div class="hostingAsideImgContainer">
               <img
-                src="img/hosting/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
+                src="img/hosting/soleil-du-matin.jpg"
                 alt="image de L'Hôtel le soleil du matin"
               />
             </div>
@@ -153,7 +153,7 @@
             <!-- IMG -->
             <div class="hostingAsideImgContainer">
               <img
-                src="img/hosting/aw-creative-VGs8z60yT2c-unsplash.jpg"
+                src="img/hosting/au-coeur-de-leau.jpg"
                 alt="Au coeur de l'eau Chambres d'hôtes"
               />
             </div>
@@ -179,7 +179,7 @@
             <!-- IMG -->
             <div class="hostingAsideImgContainer">
               <img
-                src="img/hosting/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
+                src="img/hosting/tout-bleu-et-blanc.jpg"
                 alt="Hôtel Tout bleu et Blanc"
               />
             </div>
@@ -209,7 +209,7 @@
           <a href="#" class="hostingMainItem hostingItemGeneral">
             <div class="hostingMainItemImg">
               <img
-                src="img/hosting/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
+                src="img/hosting/auberge-la-cannebiere.jpg"
                 alt="Auberge la Cannebière"
               />
             </div>
@@ -231,7 +231,7 @@
           <a href="#" class="hostingMainItem hostingItemGeneral">
             <div class="hostingMainItemImg">
               <img
-                src="img/hosting/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
+                src="img/hosting/hotel-du-port.jpg"
                 alt="Hôtel du port"
               />
             </div>
@@ -253,7 +253,7 @@
           <a href="#" class="hostingMainItem hostingItemGeneral">
             <div class="hostingMainItemImg">
               <img
-                src="img/hosting/reisetopia-B8WIgxA_PFU-unsplash.jpg"
+                src="img/hosting/hotel-les-mouettes.jpg"
                 alt="Hôtel Les mouettes"
               />
             </div>
@@ -275,7 +275,7 @@
           <a href="#" class="hostingMainItem hostingItemGeneral">
             <div class="hostingMainItemImg">
               <img
-                src="img/hosting/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
+                src="img/hosting/hotel-de-la-mer.jpg"
                 alt="Hôtel de la mer"
               />
             </div>
@@ -297,7 +297,7 @@
           <a href="#" class="hostingMainItem hostingItemGeneral">
             <div class="hostingMainItemImg">
               <img
-                src="img/hosting/nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
+                src="img/hosting/auberge-le-panier.jpg"
                 alt="Auberge le panier"
               />
             </div>
@@ -319,7 +319,7 @@
           <a href="#" class="hostingMainItem hostingItemGeneral">
             <div class="hostingMainItemImg">
               <img
-                src="img/hosting/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
+                src="img/hosting/hotel-chez-amina.jpg"
                 alt="Hôtel chez Amina"
               />
             </div>
@@ -353,7 +353,7 @@
             <a href="#" class="activityItemContainer">
               <div class="activityItemImg">
                 <img
-                  src="img/activity/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
+                  src="img/activity/vieux-port.jpg"
                   alt="Vieux port"
                 />
               </div>
@@ -368,7 +368,7 @@
             <a href="#" class="activityItemContainer">
               <div class="activityItemImg growImg">
                 <img
-                  src="img/activity/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
+                  src="img/activity/fort-de-pomegues.jpg"
                   alt="Fort de Pomègues"
                 />
               </div>
@@ -381,7 +381,7 @@
             <a href="#" class="activityItemContainer">
               <div class="activityItemImg item3">
                 <img
-                  src="img/activity/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"
+                  src="img/activity/iles-du-frioul.jpg"
                   alt="Iles du Frioul"
                 />
               </div>
@@ -396,7 +396,7 @@
             <a href="#" class="activityItemContainer">
               <div class="activityItemImg">
                 <img
-                  src="img/activity/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
+                  src="img/activity/parc-national-desCalanques.jpg"
                   alt="Parc National des Calanques"
                 />
               </div>
@@ -411,7 +411,7 @@
             <a href="#" class="activityItemContainer">
               <div class="activityItemImg">
                 <img
-                  src="img/activity/florian-wehde-xW9e8gdotxI-unsplash.jpg"
+                  src="img/activity/notre-damedela-garde.jpg"
                   alt="Notre-Dame-de-la-Garde"
                 />
               </div>
@@ -424,7 +424,7 @@
             <a href="#" class="activityItemContainer">
               <div class="activityItemImg growImg">
                 <img
-                  src="img/activity/lena-paulin-wH2-EJoDcV0-unsplash.jpg"
+                  src="img/activity/parc-longchamp.jpg"
                   alt="Parc Longchamp"
                 />
               </div>
