Suppression du menu ( duplication de code) pour un menu full flexbox

--- a/index.html
+++ b/index.html
@@ -13,27 +13,24 @@
     <title>Reservia</title>
   </head>
   <body>
+
     <header>
-      <div class="header">
-        <img src="img/Reservia.svg" alt="Logo du site Reservia" />
-
-        <!-- NAV DESKTOP -->
-        <nav class="hideOnMobile">
-          <a href="#hosting" data-active="true">Hébergements</a>
+        <div class="navItem1">
+          <img src="img/Reservia.svg" alt="Logo du site Reservia" />
+        </div>
+        
+        <div class="navItem2">
+          <a href="#hosting">Hébergements</a>
           <a href="#activity">Activités</a>
-          <a href="#">S'inscrire</a>
-        </nav>
-        <a class="hideOnDesktop" href="#">S'inscrire</a>
-      </div>
+        </div>
 
-      <!-- NAV MOBILE -->
-      <nav class="hideOnDesktop">
-        <a href="#hosting" data-active="true">Hébergements</a>
-        <a href="#activity">Activités</a>
-      </nav>
+        <div class="navItem3">
+          <a href="#">S'inscrire</a>
+        </div>
     </header>
 
     <main>
+      
       <section class="filterContainer">
         <div class="filterTitle">
           <h1>Trouver votre hébergement pour des vacances de rêve</h1>
@@ -465,5 +462,6 @@
       src="https://kit.fontawesome.com/021c81edbc.js"
       crossorigin="anonymous"
     ></script>
+
   </body>
 </html>
