Correction warning HTML

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         </div>
       </section>
 
-      <section id="hosting">
+      <div id="hosting">
         <!-- HOSTING ASIDE -->
         <aside class="hostingAside">
           <div class="hostingTitle">
@@ -337,7 +337,7 @@
 
           <a class="showMore" href="#"> Afficher plus </a>
         </div>
-      </section>
+      </div>
 
       <!-- ACTIVITY -->
       <section id="activity">
